--- a/src/assets/scss/basics/_typography.scss
+++ b/src/assets/scss/basics/_typography.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: roboto;
-  src: url("@/assets/fonts/roboto/roboto-regular.ttf");
+  src: url('@/assets/fonts/roboto/roboto-regular.ttf');
   font-weight: normal;
 }
 
