--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -12,22 +12,22 @@
 @import 'basics/buttons';
 
 // Views
-@import "views/InterviewApp";
-@import "views/Backoffice";
-@import "views/JobEdit";
-@import "views/TemplateDetails";
-@import "views/TemplateEdit";
-@import "views/TemplateOverview";
-@import "views/ApplicantDetails";
-@import "views/AccountOverview";
-@import "views/Login";
-@import "views/SignUp";
-@import "views/UserMgmt";
-@import "views/NotSupported";
-@import "views/NotFound";
-@import "views/NoMobileScreenShare";
-@import "views/InterviewError";
-@import "views/VerifyEmail";
+@import 'views/InterviewApp';
+@import 'views/Backoffice';
+@import 'views/JobEdit';
+@import 'views/TemplateDetails';
+@import 'views/TemplateEdit';
+@import 'views/TemplateOverview';
+@import 'views/ApplicantDetails';
+@import 'views/AccountOverview';
+@import 'views/Login';
+@import 'views/SignUp';
+@import 'views/UserMgmt';
+@import 'views/NotSupported';
+@import 'views/NotFound';
+@import 'views/NoMobileScreenShare';
+@import 'views/InterviewError';
+@import 'views/VerifyEmail';
 
 // Components
 @import 'cmps/ForgotPassword';
