--- a/src/assets/scss/basics/_inputs.scss
+++ b/src/assets/scss/basics/_inputs.scss
@@ -160,7 +160,7 @@
       transition: background 0.1s linear, borderColor 0.1s linear;
 
       .inner {
-        content: "";
+        content: '';
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
@@ -234,7 +234,7 @@ $md-checkbox-label-padding: 0.75em;
   text-align: start;
   font-size: 19px;
 
-  input[type="checkbox"] {
+  input[type='checkbox'] {
     position: absolute;
     margin: 0%;
     width: 1em;
@@ -246,7 +246,7 @@ $md-checkbox-label-padding: 0.75em;
   }
 
   &:hover {
-    input[type="checkbox"]:not(.star) {
+    input[type='checkbox']:not(.star) {
       &:checked,
       &.partial {
         + label:before {
@@ -269,7 +269,7 @@ $md-checkbox-label-padding: 0.75em;
 
     &:before,
     &:after {
-      content: "";
+      content: '';
       position: absolute;
       inset-inline-start: 0;
       top: 0;
@@ -288,7 +288,7 @@ $md-checkbox-label-padding: 0.75em;
     }
   }
 
-  input[type="checkbox"] {
+  input[type='checkbox'] {
     user-select: none;
     outline: 0;
     visibility: hidden;
@@ -298,7 +298,7 @@ $md-checkbox-label-padding: 0.75em;
       + label:before {
         width: 20px;
         height: 20px;
-        background: url("https://res.cloudinary.com/intervid/image/upload/v1661183646/Frontend/star_on_off_aaqypt.png") -50px -10px;
+        background: url('https://res.cloudinary.com/intervid/image/upload/v1661183646/Frontend/star_on_off_aaqypt.png') -50px -10px;
         transform: scale(1.2);
         border: 0;
       }
@@ -336,7 +336,7 @@ $md-checkbox-label-padding: 0.75em;
 
       + label:after {
         color: #fff;
-        content: "−";
+        content: '−';
         font-weight: 300;
         height: 100%;
         width: 100%;
@@ -350,7 +350,7 @@ $md-checkbox-label-padding: 0.75em;
 
     &:checked:not(.star) {
       + label:after {
-        content: "";
+        content: '';
         background-image: url(https://res.cloudinary.com/intervid/image/upload/v1672752260/Frontend/check-v2_t6dbse.svg);
         width: 100%;
         height: 100%;
