--- a/src/assets/scss/cmps/backoffice/_BackofficeToggle.scss
+++ b/src/assets/scss/cmps/backoffice/_BackofficeToggle.scss
@@ -1,67 +1,67 @@
 .backoffice-toggle {
-    display: flex;
-    position: relative;
-    width: 100%;
-    margin-block-start: 20px;
-    padding-block-start: 0.75em;
-    padding-block-end: 0.75em;
-    font-size: 12px;
-    border-radius: 4px;
-    background: $lightest-gray;
-    overflow: hidden;
-    user-select: none;
-    cursor: pointer;
+  display: flex;
+  position: relative;
+  width: 100%;
+  margin-block-start: 20px;
+  padding-block-start: 0.75em;
+  padding-block-end: 0.75em;
+  font-size: 12px;
+  border-radius: 4px;
+  background: $lightest-gray;
+  overflow: hidden;
+  user-select: none;
+  cursor: pointer;
 
-    @include from-narrow-layout {
-        display: none;
-    }
+  @include from-narrow-layout {
+    display: none;
+  }
 
+  &::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    inset-inline-start: 2px;
+    width: 50%;
+    height: 90%;
+    background: #fff;
+    transition: inset-inline-start 0.2s;
+  }
+
+  .all {
+    font-weight: 700;
+    color: $dark-gray;
+    transition: color 0.2s;
+  }
+
+  .job {
+    font-weight: unset;
+    color: $light-gray;
+    transition: color 0.2s;
+  }
+
+  &.right {
     &::before {
-        content: "";
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        inset-inline-start: 2px;
-        width: 50%;
-        height: 90%;
-        background: #fff;
-        transition: inset-inline-start 0.2s;
+      inset-inline-start: calc(50% - 2px);
     }
 
     .all {
-        font-weight: 700;
-        color: $dark-gray;
-        transition: color 0.2s;
+      font-weight: unset;
+      color: $light-gray;
     }
 
     .job {
-        font-weight: unset;
-        color: $light-gray;
-        transition: color 0.2s;
+      color: $dark-gray;
+      font-weight: 700;
     }
+  }
 
-    &.right {
-        &::before {
-            inset-inline-start: calc(50% - 2px);
-        }
-
-        .all {
-            font-weight: unset;
-            color: $light-gray;
-        }
-
-        .job {
-            color: $dark-gray;
-            font-weight: 700;
-        }
-    }
-
-    > * {
-        width: 0;
-        flex-grow: 1;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        z-index: 1;
-    }
+  > * {
+    width: 0;
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+  }
 }
