--- a/src/assets/scss/cmps/backoffice/admin/_RecordFilter.scss
+++ b/src/assets/scss/cmps/backoffice/admin/_RecordFilter.scss
@@ -5,7 +5,6 @@
   gap: 10px;
   color: $dark-gray;
 
-
   .top {
     display: flex;
     align-items: flex-end;
@@ -39,7 +38,6 @@
         display: flex;
         gap: 12px;
         // margin-inline-start: 24px;
-
 
         input {
           width: 150px;
@@ -98,13 +96,12 @@
     }
   }
 
-
   p {
     font-weight: bold;
     font-size: 14px;
   }
 
-  input[type="checkbox"] {
+  input[type='checkbox'] {
     margin: 0;
     margin-inline-start: 14px;
   }
