--- a/src/assets/scss/cmps/interview-app/interview/_InterviewCountdown.scss
+++ b/src/assets/scss/cmps/interview-app/interview/_InterviewCountdown.scss
@@ -1,63 +1,63 @@
 .interview-countdown {
-    background: #fff;
-    position: fixed;
-    top: 0;
-    inset-inline-start: 0;
-    width: 100vw;
-    height: 100vh;
-    z-index: 1000;
+  background: #fff;
+  position: fixed;
+  top: 0;
+  inset-inline-start: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 1000;
 
-    p {
-        position: absolute;
-        top: 30%;
-        inset-inline-start: 50%;
-        transform: translateX(calc(-50% * var(--dir))) translateY(0%);
-        font-size: calc(clamp(0.75rem, 7vw, 250%));
-        text-align: center;
+  p {
+    position: absolute;
+    top: 30%;
+    inset-inline-start: 50%;
+    transform: translateX(calc(-50% * var(--dir))) translateY(0%);
+    font-size: calc(clamp(0.75rem, 7vw, 250%));
+    text-align: center;
+  }
+
+  .counter {
+    position: absolute;
+    background: $cta;
+    top: 50%;
+    inset-inline-start: 50%;
+    transform: translateX(calc(-50% * var(--dir))) translateY(-50%);
+    width: 20vmin;
+    height: 20vmin;
+    border-radius: 50%;
+    padding: 1em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 5;
+
+    &::after {
+      content: '';
+      color: #fff;
+      text-align: center;
+      font-size: calc(clamp(0.75rem, 3.5vw, 200%));
+      animation: countdown 4s linear forwards;
+      z-index: 15;
+      white-space: nowrap;
+    }
+  }
+
+  @keyframes countdown {
+    0% {
+      content: '3';
     }
 
-    .counter {
-        position: absolute;
-        background: $cta;
-        top: 50%;
-        inset-inline-start: 50%;
-        transform: translateX(calc(-50% * var(--dir))) translateY(-50%);
-        width: 20vmin;
-        height: 20vmin;
-        border-radius: 50%;
-        padding: 1em;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        z-index: 5;
-
-        &::after {
-            content: "";
-            color: #fff;
-            text-align: center;
-            font-size: calc(clamp(0.75rem, 3.5vw, 200%));
-            animation: countdown 4s linear forwards;
-            z-index: 15;
-            white-space: nowrap;
-        }
+    25% {
+      content: '2';
     }
 
-    @keyframes countdown {
-        0% {
-            content: "3";
-        }
-
-        25% {
-            content: "2";
-        }
-
-        50% {
-            content: "1";
-        }
-
-        75%,
-        100% {
-            content: "Good luck";
-        }
+    50% {
+      content: '1';
     }
+
+    75%,
+    100% {
+      content: 'Good luck';
+    }
+  }
 }
