--- a/src/assets/scss/setup/_variables.scss
+++ b/src/assets/scss/setup/_variables.scss
@@ -12,6 +12,7 @@ $darkest-gray: #303135;
 
 // $background-gray: #f0f2f5;
 $background-gray: #f4f6fa;
+$background-white: rgb(255, 255, 255);
 
 $btn-disable-background: #EDEFF4;
 $btn-disable-color: #AAADB5;
@@ -47,3 +48,4 @@ $side-nav-width: 250px;
 //Box shadows:
 $light-shadow: 0 4px 10px 0 #0000000a;
 $border-bottom-shadow: 0 4px 10px 0 #0000000a;
+$modal-shadow: 0px 15px 50px rgba(0, 0, 0, 0.3);;
