lots of bugs in video player

--- a/src/assets/scss/setup/_variables.scss
+++ b/src/assets/scss/setup/_variables.scss
@@ -45,5 +45,4 @@ $side-nav-width: 250px;
 //Box shadows:
 $light-shadow: 0 4px 10px 0 #0000000a;
 $border-bottom-shadow: 0 4px 10px 0 #0000000a;
-$modal-shadow: 0px 15px 50px rgba(0, 0, 0, 0.3);;
-
+$modal-shadow: 0px 15px 50px rgba(0, 0, 0, 0.3);
