--- a/src/assets/scss/cmps/applicant-details/_videoPlayer.scss
+++ b/src/assets/scss/cmps/applicant-details/_videoPlayer.scss
@@ -86,6 +86,18 @@
     }
   }
 
+  .player-controls{
+
+    [data-tooltip]{
+
+      &::before{
+        @include from-mobile-layout {
+        display: none;
+        }
+      }
+    }
+  }
+
   video {
     width: 100%;
     height: 100%;
