fix typo on actions model sayes iteames converted to items

--- a/src/assets/scss/cmps/common/_ActionsModal.scss
+++ b/src/assets/scss/cmps/common/_ActionsModal.scss
@@ -10,7 +10,7 @@
   box-shadow: $modal-shadow;
   background-color: $background-white;
 
-  .iteams-count {
+  .items-count {
     font-size: 40px;
     color: $background-white;
     border-radius: 5px;
@@ -41,7 +41,7 @@
       margin-inline-start: 1px;
     }
 
-    .selected-iteams-count {
+    .selected-items-count {
       color: $medium-gray;
       margin-inline-start: 5px;
     }
