added loading animation to filter button  when changing filter options + change button color

--- a/src/assets/scss/cmps/common/_FilterBox.scss
+++ b/src/assets/scss/cmps/common/_FilterBox.scss
@@ -1,8 +1,31 @@
+@-webkit-keyframes rotation {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
 .filter-box {
   display: flex;
   align-items: center;
   gap: 15px;
   height: 32px;
+
+  .loading{
+    border: 3px solid rgba(255, 255, 255, 0.5);
+    border-top-color: $cta;
+    border-radius: 50%;
+    animation: rotation .8s linear infinite;
+    width: 1.1rem;
+    height: 1.1rem;
+    margin-left: auto;
+    margin-right: auto;
+    pointer-events: none;
+  }
 
   .filter-btn {
     position: relative;
@@ -12,13 +35,13 @@
     white-space: nowrap;
     height: 100%;
 
-    > button {
+    button {
       display: flex;
       align-items: center;
       gap: 5px;
       height: 100%;
       padding-inline: 1em;
-      border: 1px solid $light-gray;
+      border: 1px solid $lightest-gray;
       border-radius: 4px;
       font-size: 14px;
 
@@ -171,20 +194,28 @@
             // color: $btn-disable-color;
           }
 
+
           &.bold {
             font-weight: 700;
           }
         }
 
         .set-filter-btn {
-          background: $dark-gray;
+          background: $cta;
           color: #fff;
           padding: 0.5em 0.75em;
           border-radius: 4px;
+          min-width: 30%;
 
           &[disabled] {
             background-color: $btn-disable-background;
             color: $btn-disable-color;
+            cursor:default;
+          }
+
+          &:hover {
+            filter: brightness(95%);
+            scale: 1.01;
           }
         }
       }
