--- a/src/assets/scss/views/_SignUp.scss
+++ b/src/assets/scss/views/_SignUp.scss
@@ -274,7 +274,7 @@
 
         .google-btn {
           box-shadow: unset;
-          border: 1px solid $light-gray;
+          border: 0.7px solid $cta;
           border-radius: 4px;
           height: 50px;
           display: flex;
@@ -300,6 +300,24 @@
             font-size: 16px;
           }
         }
+      }
+    }
+    .right-section {
+      display: flex;
+      flex-direction: column;
+      .apps-badges {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        padding-block-start: 20px;
+        gap: 15px;
+        img {
+          height: 2.1875em;
+          width: fit-content;
+        }
+      }
+      .hidden {
+        display: none;
       }
     }
   }
